--- a/new-final.qmd
+++ b/new-final.qmd
@@ -61,14 +61,12 @@ Create a table that is grouped by each plantation year, showing the total number
 
 mangrove_summary <- mangrove_df |> 
   group_by(plantation_year) |> 
-  summarise(plot_count = length(unique(plot)),
-          tot_samples = n(),
-          "sum_tot_c_mg/ha" = sum(total_tree_mg_c_ha))
-
-          
+  summarise("Plot Count" = length(unique(plot)),
+          "Sample Count" = n(),
+          "Tree Height mean" = mean(height_cm),
+          "Total Carbon (mg/ha)" = sum(total_tree_mg_c_ha))
 
 knitr::kable(mangrove_summary)
-
 ```
 
 Create a table that shows the samples per each plot
@@ -112,6 +110,7 @@ ggplot(plots, aes(x= sample_count, y = sd_tree_c_ha)) +
 ```
 
 
+
 ## Creating our question and focusing on the 2017 year.
 Lets focus on the 2017 plantation year
 
@@ -120,7 +119,7 @@ Why?
 - It has the highest variance from the three replantation years. 
 - There are 3 different sampling collection efforts.
 
-Create a table that only contains information from the 2017 plantation year and the relevant columns.
+Create a table that only contains information from the 2017 plantation year and select the relevant columns.
 ```{r}
 # Potential need to rename the plots as "Sample Plot#1", "Sample plot #2", etc
 # Potential need to rename the plot size as "25m2", "77m2", "154m2"
@@ -179,11 +178,11 @@ kable(mangrove_plots_2017)
 ```
 
 
-## Analyzing the different options that we can do.
+## Analyzing the different options to answer our initial research question:
 
 **Option 1:** Tree Carbon (mg/ha) vs. Sample Types - Create your hypothesis testing, and define the confidence intervals for the Tree Carbon sequestration in mg per hectare depending on the sample type comparison.
 
-**Option 2:** What is the density difference between sample sizes.
+**Option 2:** What is the density difference between sample sizes and effect of variance in the Total Tree Carbon (mg/ha).
 
 Explore the differences.
 - Smaller plot size, higher density but higher variability.
@@ -192,8 +191,6 @@ Explore the differences.
 
 
 ## Starting the code per code chunks
-
-
 ## **Option 1:**
 
 Plot Size vs. Total Tree Carbon
@@ -202,7 +199,10 @@ Plot Size vs. Total Tree Carbon
 mangrove_2017 |>
   ggplot(aes(x=plot_size_m2, y = total_tree_mg_c_ha,color = plot_size_m2)) +
   geom_boxplot() +
-  labs(title = "Tree mg C vs Plot Type") +
+  labs(title = "Tree Carbon vs Plot Type",
+       subititle = "Plantation Year - 2017",
+       x = "Plot Size (m2)",
+       y = "Total Tree Carbon (mg/ha)") +
   scale_color_brewer(palette = "Dark2") 
 
 ```
@@ -215,11 +215,9 @@ State your null and alternative hypotheses
 
 **Alternative Hypothesis-** The Total Carbon per Tree (mg/ha) in the sample size of 25m2 is different than the one to the 154m2.
 
-In other words: For the null hypothesis you state that there is no difference in the means of the total carbon per tree (mg) between the sample size of 25m2 and 154m2.
-
-Alternative hypothesis you state that there is a difference in the means of the total carbon per tree (mg) between the sample size of 25m2 and 154m2.
-
 $$H_0: \mu_{25m2} - \mu_{154m2} = 0$$
+$$H_0: \mu_{25m2} - \mu_{154m2} \neq 0$$
+
 
 Calculate the Point Estimate
 
@@ -254,7 +252,7 @@ z_score_1 <- (point_est_1 - 0) / SE_1
 z_score_1
 
 ```
-**The standard error is the observed difference in Tree Carbon (mg/ha) which is 20.2 standard deviations above the null of "zero difference".**
+**Thanks to this calculation we can tell the observed difference in Tree Carbon (mg/ha) is 20.2 standard deviations above our null hypothesis of "zero difference".**
 
 Calculate the T-Test and P-Value
 ```{r}
@@ -265,21 +263,10 @@ option1_ttest
 
 ```
 
-Check differences between manual and t.test automatic
+**With this results we can reject the null as the p-value is very small, meaning there is a significant statistical difference between the means on Carbon storage in each tree per hectare between the sample plot size of 25m2 to the sample size of 154m2**
 
-```{r}
 
-#P-value with T.Test
-print(option1_ttest$p.value)
-
-#P-Value with pnorm
-pval_1 = pnorm(point_est_1, mean = 0, sd = SE_1, lower.tail = FALSE)
-
-print(pval_1)
-```
-
-**With this results we can reject the null as the p-value is very small, meaning there is a significant difference between the means on Carbon storage in each tree per hectare between the sample plot size of 25m2 to the sample size of 154m2**
-
+Now lets calculate the Confidence Intervals
 ```{r}
 
 crit_val_1 = qnorm(0.025, lower.tail = F)
@@ -291,7 +278,7 @@ print(paste0("There is 95% probability that between [", ci_lower_1,",",ci_upper_
 
 ```
 
-We are 95% confident that the true value lies between 0.308 - 0.374 Tree Carbon sequestration in mg per hectare.
+We are 95% confident that the true value of the difference in tree carbon across the two plot sizes lies between 0.308 - 0.374 mg per hectare.
 
 ```{r}
 mangrove_2017 |>
@@ -308,6 +295,9 @@ mangrove_2017 |>
                         guide = guide_legend(override.aes = list(color = c("gray50", "gray10"))))
 
 ```
+
+
+Now, the difference of the means between a sample size plot of 25m2 vs. a sample plot of 154m2 are very different. BUT between a sample plot of 77m2 and the sample plot of 154m2 the mean seems to be way closer. Now, lets analyse this two more similar types of plot.
 
 
 
@@ -348,6 +338,8 @@ z_score_2 <- (point_est_2 - 0) / SE_2
 z_score_2
 
 ```
+**Now we can tell that the Z-Score between a sample plot of 77m2 and 154m2 is lower, meaning that the the observed difference in Tree Carbon (mg/ha) is 9.23 standard deviations above our null hypothesis of "zero difference".**
+
 
 Calculate t - test
 
@@ -359,26 +351,10 @@ option2_ttest
 
 ```
 
-Calculate the manual p-value
-```{r}
-pval_2 = 2* pnorm(point_est_2, mean = 0, sd = SE_2, lower.tail = FALSE)
-
-```
+**With this results we can also reject the null as the p-value is again very small, meaning there is a significant difference between the means on Carbon storage in each tree per hectare between the sample plot size of 77m2 to the sample size of 154m2**
 
 
-Check differences between manual and t.test automatic
-
-```{r}
-
-#P-value with T.Test
-print(option2_ttest$p.value)
-
-#P-Value with pnorm
-print(pval_2)
-```
-
-**With this results we can reject the null as the p-value is very small, meaning there is a significant difference between the means on Carbon storage in each tree per hectare between the sample plot size of 77m2 to the sample size of 154m2**
-
+Now lets calculate both confidence intervals
 ```{r}
 
 crit_val_2 = qnorm(0.025, lower.tail = F)
@@ -409,11 +385,17 @@ mangrove_2017 |>
 ```
 
 
+Conclusion:
 
+As we can see in the second graph, now both means are much closer together but satistically significantly enough difference to tell they are different. With this data analysis and results we can help the actual client have a better understanding on their plot sampling sizes, concluding that smaller plot sizes somehow are getting a large carbon estimate.
 
 
 # Option 2 : Distributions and Power
 
+Now, let analyse what is the effect of this difference in densities and what is this variance telling us.
+
+
+Creating a new table and graph to easily visualize what is the density per plot type (Number of trees per m2)
 ```{r}
 #Checking the type of class per column
 str(plots_2017)
@@ -421,7 +403,6 @@ str(mangrove_2017)
 
 #Changing the column to numeric
 mangrove_df$plot_size_m2_num <- as.numeric(mangrove_df$plot_size_m2)
-
 
 density_df <- read_csv(here::here("data","clean_monitoring_data_javier.csv")) |> clean_names() |> 
   filter(plantation_year == 2017) |> 
@@ -436,25 +417,21 @@ density_df <- read_csv(here::here("data","clean_monitoring_data_javier.csv")) |>
   mutate(density = sample_count/plot_size_m2)
 
 
-```
-
-Create a plot graph for the density
-```{r}
-
-ggplot(density_df, aes(x= as.factor(plot_size_m2), y= density, col = as.factor(plot_size_m2))) +
-  geom_boxplot() +
+ggplot(density_df, aes(x= as.factor(plot_size_m2), y= density, fill = as.factor(plot_size_m2))) +
+  geom_boxplot(alpha = 0.7) +
   labs(title = "Density of trees per plot size",
-       x= "Plot Size",
+       x= "Plot Size (m2)",
        y = "Density (Tree/m2)",
-       col = "Plot Size (m2)")
-
+       col = "Plot Size (m2)") +
+  scale_fill_discrete(name = "Plot Type")
 
 ```
 
 
+In this graph we are looking at how the Carbon mean per plot doesn´t change much when you increase the samples. We can see that the total carbon is more influenced by the density than the number of samples per plot.
 ```{r}
 
-ggplot(density_df, aes(x= sample_count, y=mean_carbon_mg_ha, color = as.factor(plot_size_m2) )) +
+ggplot(density_df, aes(x= sample_count, y= mean_carbon_mg_ha, color = as.factor(plot_size_m2) )) +
   geom_point() +
   labs(title= "Carbon mean per sample count",
        x = "Sample Count",
@@ -464,7 +441,6 @@ ggplot(density_df, aes(x= sample_count, y=mean_carbon_mg_ha, color = as.factor(p
 
 
 Plot the three distributions
-
 ```{r}
 #Total Tree Carbon (mg/ha)
 mangrove_2017 |> 
@@ -483,6 +459,7 @@ ggplot(mangrove_2017, aes(x=total_tree_mg_c_ha, color = plot_size_m2)) +
 ```
 
 Comparing the variation of samples per plot
+
 Question: What technique of mangrove sampling will bring a lower variance in Total Tree Carbon calculation (mg/ha).
 
 ```{r}
@@ -522,8 +499,7 @@ ggplot(aes(x=total_tree_mg_c_ha)) +
 
 ```
 
-The final plot showing the relationship between sample size and variation of the calculated tree carbon (mg/ha)
-
+Create a plot showing the relationship between sample size and variation of the calculated tree carbon (mg/ha)
 ```{r}
 ggplot(plots_2017, aes(x= sample_count, y = sd_tree_c_ha)) +
   geom_point(aes(color = plot_size_m2)) +
@@ -534,4 +510,29 @@ ggplot(plots_2017, aes(x= sample_count, y = sd_tree_c_ha)) +
        x = "Samples per Plot",
        y = "Variance of Tree carbon (mg/ha)")
 ```
+
+
+Show the histogram for all total carbon variance of 2017
+```{r}
+ggplot(plots_2017, aes(x=sd_tree_c_ha)) +
+  geom_histogram(aes(y = stat(density)), color = "gray20", fill = "darkolivegreen", alpha = 0.7) +
+  geom_density(col = "gray30", alpha = 0.15, fill = "green") +
+  labs(title = "Total Carbon per Tree (mg/ha)",
+       subtitle = "All Samples",
+       x = "Tree Carbon Variance (mg/ha)",
+       y = "Plots")
+```
+
+But now if you separate per plot type you have something different
+```{r}
+plots_2017 |> 
+  filter(plot_size_m2 %in% c(25.133, 76.969, 153.938)) |> 
+ggplot(aes(x=sd_tree_c_ha)) +
+  geom_histogram(aes(y = stat(density), fill = plot_size_m2),color = "gray30", alpha = 0.3) +
+  geom_density(aes(fill = plot_size_m2), col = "gray30", alpha = 0.8) +
+  labs(title = "Total Carbon per Tree (mg/ha)")
+```
+
+
+
 
